Minor UI alignment fixes.

--- a/FullStackDevExercise/ClientApp/src/styles.scss
+++ b/FullStackDevExercise/ClientApp/src/styles.scss
@@ -18,6 +18,8 @@ footer {
   color: #d8d8d8;
 
   .social-network {
+    padding: 0;
+
     li {
       display: inline;
       font-size: 36px;
